Add mais elementos

--- a/css/layout/_home.scss
+++ b/css/layout/_home.scss
@@ -9,6 +9,9 @@ $layout-name: "home";
     background-repeat: no-repeat;
     background-position: center;
     background-color: white;
+    background-image: url(/imgs/progamando.jpg);
+    
+    
 
     &-btn{
         width: 100%;
