--- a/css/layout/_sobre.scss
+++ b/css/layout/_sobre.scss
@@ -32,14 +32,16 @@ $layout-name: "sobre";
 
                 p{
                     margin: 2.5rem 0 5rem 0 ;
+                    font-family: 'Kdam Thmor Pro', sans-serif;
+                    // font-family: 'Sarala', sans-serif;
+                    margin-top: 1.5rem;
                 }
 
                 h2{
+                    font-family: 'Kdam Thmor Pro', sans-serif;
                     margin-top: 1.5rem;
                 }
             }
             
         }
     }
-    // font-size: 2.5rem;
-    // margin-bottom: 2.5rem;
