--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,7 @@
 @import "component/c-button";
 @import "component/c-card";
 @import "component/c-menu";
+ @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Sarala&display=swap'); 
 
 *{
     margin: 0;
