--- a/css/layout/_habilidades.scss
+++ b/css/layout/_habilidades.scss
@@ -18,16 +18,21 @@ $layout-name: "habilidades-sessao";
 
             i {
                 font-size: 2.5rem;
+                
               }
             h3 {
                 font-family: var(--font-secundary);
                 font-size: 2rem;
                 padding-left: 1rem;
+                font-family: 'Kdam Thmor Pro', sans-serif;
+                margin-top: 0.5rem;
+                
               }
         }
         .conhecimento-text{
             margin-top: 1rem;
             color: #fff;
+            font-family: 'Kdam Thmor Pro', sans-serif;
         }
     }
 
