--- a/css/layout/_projetos.scss
+++ b/css/layout/_projetos.scss
@@ -17,7 +17,7 @@ $layout-name: "projetos";
         width: 100%;
 
     .projetos-img1{
-        background-image: url(https://viscircle.de/wp-content/uploads/2018/10/blender-weisses-logo.png);
+        background-image: url(/imgs//motinha.png);
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -25,7 +25,7 @@ $layout-name: "projetos";
     }
 
   .projetos-img2{
-        background-image: url(../../imgs/imagem.jpg);
+        background-image: url(../../imgs/web.webp);
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -41,7 +41,7 @@ $layout-name: "projetos";
     }
     
     .projetos-img3{  
-        background-image: url(../../imgs/figma2.png);
+        background-image: url(../../imgs/Editor_Video.jpg);
         background-repeat: no-repeat;
         background-size: 120%;
         background-position: center;
