--- a/css/layout/_projetos.scss
+++ b/css/layout/_projetos.scss
@@ -25,7 +25,7 @@ $layout-name: "projetos";
     }
 
   .projetos-img2{
-        background-image: url(../../imgs/web.webp);
+        background-image: url(../../imgs/semfundo.png);
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -41,9 +41,10 @@ $layout-name: "projetos";
     }
     
     .projetos-img3{  
-        background-image: url(../../imgs/Editor_Video.jpg);
+        background-image: url(../../imgs/Edtitor.web.jpg);
+        
         background-repeat: no-repeat;
-        background-size: 120%;
+        background-size: 80%;
         background-position: center;
         object-fit: cover;
     }
