--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: 0.5s;
+    scroll-behavior: smooth;
 }
 
 a{
@@ -31,6 +33,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 
     h2{
         color: white;
