--- a/css/variaveis/_variaveis.scss
+++ b/css/variaveis/_variaveis.scss
@@ -58,6 +58,7 @@ $social-media-colors: (
   'youtube'   : #cd201f,
   'instagram' : #e4405f,
   'github'    : #333,
+  'email'     :  #FF0000
 );
 
 // ==========================================================================
