--- a/css/component/_c-card.scss
+++ b/css/component/_c-card.scss
@@ -58,7 +58,7 @@ $component-name: "c-card";
     }
 
     &--twitter{
-        background: #00aced;
+        background:  #FF0000;
         clip-path: circle(0% at 725px 90%);
 
         .c-button{
