--- a/css/layout/_habilidades.scss
+++ b/css/layout/_habilidades.scss
@@ -1,7 +1,7 @@
 $layout-name: "habilidades-sessao";
 
 .#{$layout-name} {
-    background: whitesmoke;
+    background: white;
     
     .conhecimentos{
         height: 100%;
