--- a/css/layout/_habilidades.scss
+++ b/css/layout/_habilidades.scss
@@ -2,6 +2,7 @@ $layout-name: "habilidades-sessao";
 
 .#{$layout-name} {
     background: white;
+    height: 100vh;
     
     .conhecimentos{
         height: 100%;
