--- a/css/layout/_contato.scss
+++ b/css/layout/_contato.scss
@@ -2,6 +2,7 @@ $layout-name: "contato";
 
 .#{$layout-name} {
     background: #dadadd;
+    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
