--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@
 }
 
 .navegacao-principal .menu-fixo .navegacao-container .navegacao-container-foto:hover {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   cursor: pointer;
@@ -56,7 +56,7 @@
 }
 
 .home {
-  height: 120vh;
+  height: 100vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -77,7 +77,7 @@
 }
 
 .home-container {
-  height: 2vh;
+  height: 5vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -92,7 +92,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: 25rem;
+  margin-bottom: 15rem;
 }
 
 .home-container p {
@@ -141,10 +141,13 @@
 }
 
 .home-btn .btn:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
   background: black;
   color: white;
-  -webkit-transition: 1s;
-  transition: 1s;
+  font-weight: bold;
+  -webkit-transition: 0.5s all ease-in-out;
+  transition: 0.5s all ease-in-out;
   cursor: pointer;
 }
 
@@ -155,6 +158,7 @@
 }
 
 .sobre {
+  height: 100vh;
   width: 100%;
   background: black;
   display: -webkit-box;
@@ -227,6 +231,7 @@
 
 .habilidades-sessao {
   background: white;
+  height: 100vh;
 }
 
 .habilidades-sessao .conhecimentos {
@@ -337,6 +342,7 @@
 }
 
 .projetos {
+  height: 100vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -366,8 +372,7 @@
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  height: 100%;
-  width: 100%;
+  width: 80%;
 }
 
 .projetos .projetos-container .projetos-img1 {
@@ -386,8 +391,8 @@
   background-position: center;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
-  -webkit-transition: 1s ease-out;
-  transition: 1s ease-out;
+  -webkit-transition: 0.5s all ease-out;
+  transition: 0.5s all ease-out;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -410,9 +415,10 @@
 }
 
 .projetos .projetos-container .projetos-card {
-  width: 500px;
-  height: 500px;
-  border: 1px white solid;
+  width: 550px;
+  height: 450px;
+  border: black 2px  solid;
+  background-color: gray;
   margin: 50px 50px 50px 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -424,36 +430,39 @@
       -ms-flex-pack: center;
           justify-content: center;
   border-radius: 8px;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .projetos .projetos-container .projetos-card:hover .projetos-card-btn {
-  opacity: 0;
-  -webkit-transition: 0.8s ease-in-out;
-  transition: 0.8s ease-in-out;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 0.5s all ease-in-out;
+  transition: 0.5s all ease-in-out;
 }
 
 .projetos .projetos-container .projetos-card .projetos-card-btn {
   width: 90px;
   padding: 8px;
   margin-bottom: 25px;
-  color: black;
+  background-color: white;
   cursor: pointer;
   background: none;
-  border: white 1px solid;
-  color: azure;
-  -webkit-transition: 1s;
-  transition: 1s;
+  border: black 1.5px solid;
+  color: white;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   border-radius: 200rem;
 }
 
 .projetos .projetos-container .projetos-card .projetos-card-btn:hover {
-  background: transparent;
+  background-color: black;
+  color: white;
 }
 
 .contato {
   background: #dadadd;
+  height: 100vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
