--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@
   height: 8vh;
   background: black;
   color: white;
+  font-weight: bold;
+  border: none;
+  -webkit-transition: 0.5 all ease-in-out;
+  transition: 0.5 all ease-in-out;
+  font-size: 18px;
+  padding: 15px;
 }
 
 .navegacao-principal .menu-fixo .navegacao-container .navegacao-container-foto {
@@ -52,7 +58,16 @@
 }
 
 .navegacao-principal .menu-fixo .navegacao-container .nave-intens li:hover {
-  border-bottom: 5px solid white;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 21px;
+  padding: 5px;
+  border: none;
+  border-radius: 200rem;
+  -webkit-transition: 0.5s all ease-in-out;
+  transition: 0.5s all ease-in-out;
 }
 
 .home {
