--- a/css/layout/_contato.scss
+++ b/css/layout/_contato.scss
@@ -2,7 +2,6 @@ $layout-name: "contato";
 
 .#{$layout-name} {
     background: #dadadd;
-    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -26,3 +25,49 @@ $layout-name: "contato";
     }
     
 }
+
+@media (max-width: 900px) {
+    .contato .l-main{
+        width: 708px;
+        height: 372px;
+    }
+
+}
+
+@media (max-width: 800px) {
+    .contato .l-main{
+        width: 658px;
+        height: 322px;
+    }
+
+    .c-card__title{
+        font-size: 1.2rem;
+    }
+
+    .c-card__explanation{
+        font-size: 1.1rem;
+    }
+
+}
+
+@media (max-width: 700px) {
+    .contato .l-main{
+        width: 430px;
+        height: 430px;
+    }
+
+    
+    .c-card-content{
+        margin-bottom: 1rem;
+    }
+    
+    .c-card__title{
+        font-size: 1.2rem;
+    }
+
+    .c-card__explanation{
+        font-size: 1.1rem;
+    }
+
+}
+
