--- a/css/layout/_habilidades.scss
+++ b/css/layout/_habilidades.scss
@@ -2,9 +2,10 @@ $layout-name: "habilidades-sessao";
 
 .#{$layout-name} {
     background: white;
-    height: 100vh;
+    padding: 3.5rem 0;
     
     .conhecimentos{
+        margin-top: 1vh;
         height: 100%;
         display: grid;
         grid-template-columns: repeat(16,1fr);
@@ -73,6 +74,75 @@ $layout-name: "habilidades-sessao";
             object-fit: cover;
             height: 100%;
         }
+      }
     }
+}
+
+@media (max-width: 1312px){
+    .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header h3{
+          font-size: 1.6rem;
+}
+    .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header i{
+          font-size: 2rem;
+}
+
+}
+
+@media (max-width: 1067px){
+    .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header h3{
+          font-size: 1.3rem;
+}
+    .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header i{
+          font-size: 1.8rem;
+}
+
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(1){
+    grid-column: 3/7;
+    grid-row: 1/3;
+}
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(2){
+    grid-column: 2/6;
+    grid-row: 3/5;
+}
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(3){
+    grid-column: 3/7;
+    grid-row: 5/-1;
+}
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(4){
+    grid-column: 11/15;
+    grid-row: 1/3;
+}
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(5){
+    grid-column: 12/16;
+    grid-row: 3/5 ;
+}
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(6){
+    grid-column: 11/15;
+    grid-row: 5/-1;
+}
+
+
+
+.habilidades-sessao .conhecimentos .conhecimentos-img{
+    height: 60%;
+    width: 60%;
+}
+
+}
+
+@media (max-width: 850px){
+    .habilidades-sessao .conhecimentos .conhecimento .conhecimento-text p{
+            font-size: 0.9rem;
     }
+
+    .habilidades-sessao .conhecimentos .conhecimentos-img{
+        height: 50%;
+        width: 50%;
+    }
+
+}
+
+@media (max-width: 800px){
+
+
 }
