--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,6 @@
 }
 
 .sobre {
-  height: 100vh;
   width: 100%;
   background: black;
   display: -webkit-box;
@@ -246,10 +245,11 @@
 
 .habilidades-sessao {
   background: white;
-  height: 100vh;
+  padding: 3.5rem 0;
 }
 
 .habilidades-sessao .conhecimentos {
+  margin-top: 1vh;
   height: 100%;
   display: -ms-grid;
   display: grid;
@@ -356,8 +356,83 @@
   height: 100%;
 }
 
+@media (max-width: 1312px) {
+  .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header h3 {
+    font-size: 1.6rem;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header i {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 1067px) {
+  .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header h3 {
+    font-size: 1.3rem;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento .conhecimento-header i {
+    font-size: 1.8rem;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento:nth-child(1) {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
+    grid-column: 3/7;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento:nth-child(2) {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 4;
+    grid-column: 2/6;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
+    grid-row: 3/5;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento:nth-child(3) {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
+    grid-column: 3/7;
+    grid-row: 5/-1;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento:nth-child(4) {
+    -ms-grid-column: 11;
+    -ms-grid-column-span: 4;
+    grid-column: 11/15;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento:nth-child(5) {
+    -ms-grid-column: 12;
+    -ms-grid-column-span: 4;
+    grid-column: 12/16;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 2;
+    grid-row: 3/5;
+  }
+  .habilidades-sessao .conhecimentos .conhecimento:nth-child(6) {
+    -ms-grid-column: 11;
+    -ms-grid-column-span: 4;
+    grid-column: 11/15;
+    grid-row: 5/-1;
+  }
+  .habilidades-sessao .conhecimentos .conhecimentos-img {
+    height: 60%;
+    width: 60%;
+  }
+}
+
+@media (max-width: 850px) {
+  .habilidades-sessao .conhecimentos .conhecimento .conhecimento-text p {
+    font-size: 0.9rem;
+  }
+  .habilidades-sessao .conhecimentos .conhecimentos-img {
+    height: 50%;
+    width: 50%;
+  }
+}
+
 .projetos {
-  height: 100vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -477,7 +552,6 @@
 
 .contato {
   background: #dadadd;
-  height: 100vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -508,6 +582,42 @@
 
 .contato .l-main h2 {
   color: black;
+}
+
+@media (max-width: 900px) {
+  .contato .l-main {
+    width: 708px;
+    height: 372px;
+  }
+}
+
+@media (max-width: 800px) {
+  .contato .l-main {
+    width: 658px;
+    height: 322px;
+  }
+  .c-card__title {
+    font-size: 1.2rem;
+  }
+  .c-card__explanation {
+    font-size: 1.1rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .contato .l-main {
+    width: 430px;
+    height: 430px;
+  }
+  .c-card-content {
+    margin-bottom: 1rem;
+  }
+  .c-card__title {
+    font-size: 1.2rem;
+  }
+  .c-card__explanation {
+    font-size: 1.1rem;
+  }
 }
 
 .c-button {
@@ -625,7 +735,6 @@
 .c-card__title {
   font-weight: normal;
   line-height: 1;
-  margin: 0;
 }
 
 .c-card__title-emphasis {
@@ -746,6 +855,14 @@ a {
   width: 95px;
   height: 4px;
   background: white;
+}
+
+.titulo-preto h2 {
+  color: black;
+}
+
+.titulo-preto .linha {
+  background: black;
 }
 
 /* ===KEYFRAMES=== */
