--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@
 @import "component/c-button";
 @import "component/c-card";
 @import "component/c-menu";
- @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Sarala&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Sarala&display=swap'); 
 
 *{
     margin: 0;
@@ -45,6 +45,15 @@ a{
         width: 95px;
         height: 4px;
         background: white;
+    }
+}
+.titulo-preto{
+    h2{
+        color: black;
+     
+    }
+    .linha{
+        background: black;
     }
 }
 
