--- a/css/layout/_projetos.scss
+++ b/css/layout/_projetos.scss
@@ -16,7 +16,7 @@ $layout-name: "projetos";
         width: 80%;
 
     .projetos-img1{
-        background-image: url(../../imgs/moto.png);
+        background-image: url(../../imgs/Blender.png);
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -24,7 +24,7 @@ $layout-name: "projetos";
     }
 
   .projetos-img2{
-        background-image: url(../../imgs/projeto_foto.jpg);
+        background-image: url(../../imgs/Progamador.jpg);
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -40,7 +40,7 @@ $layout-name: "projetos";
     }
     
     .projetos-img3{  
-        background-image: url(../../imgs/projeto2.jpg);
+        background-image: url(../../imgs/Desgin.jpg);
         background-repeat: no-repeat;
         background-size: 80%;
         background-position: center;
