--- a/css/style.css
+++ b/css/style.css
@@ -465,7 +465,7 @@
 }
 
 .projetos .projetos-container .projetos-img1 {
-  background-image: url(../../imgs/moto.png);
+  background-image: url(../../imgs/Blender.png);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -474,7 +474,7 @@
 }
 
 .projetos .projetos-container .projetos-img2 {
-  background-image: url(../../imgs/projeto_foto.jpg);
+  background-image: url(../../imgs/Progamador.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -495,7 +495,7 @@
 }
 
 .projetos .projetos-container .projetos-img3 {
-  background-image: url(../../imgs/projeto2.jpg);
+  background-image: url(../../imgs/Desgin.jpg);
   background-repeat: no-repeat;
   background-size: 80%;
   background-position: center;
