--- a/css/layout/_home.scss
+++ b/css/layout/_home.scss
@@ -24,7 +24,7 @@ $layout-name: "home";
             font-family: 'Kdam Thmor Pro', sans-serif;
               margin-top: 1.5rem;                 
               font-size: 1.2rem;
-              margin: 1vh;
+              margin: 0.2vh;
         }
     }
     img{
@@ -38,7 +38,7 @@ $layout-name: "home";
         flex-direction: column;
         align-items: center;
         justify-content: flex-end;
-        margin-bottom: 10rem;
+        margin-bottom: 7.5rem;
 
     .btn{
         background: transparent;
@@ -49,7 +49,7 @@ $layout-name: "home";
         box-shadow: #0d1c4a;
         font-family: 'Sarala', sans-serif;
         font-size: 20px;
-        font-weight: 400;
+        font-weight: 700px;
         color: black;
         border-radius: 200rem;
 
